# cmake_clang_mydemo

./: .gitignore  CMakeLists.txt  README.md
src/: test_main.cpp
src/include/: struct.h  test.c  test.h
src/init/: main.c
